Fix compiler crasher on typealias with a cycle in the constraints

rdar://problem/52463696
SR-11052